@@ -1,6 +1,8 @@
 2000-05-25  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Display/GAIA.pm (new): Add use_remote_gaia and special case kauwa 
+	(launch): _launch_new_gaia and _open_gaia_socket are now methods
+	(the latter now requires the object state)
 
 2000-05-10  Tim Jenness  <timj@jach.hawaii.edu>
 
